# mat

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSES-DATA.md  README.md  RELEASE_PROCESS.md  justfile.project  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: init-git.sh  init-precommit.sh  post-attach.sh  post-create.sh  post-start.sh  setup-git-conf.sh  verify-auth.sh
.github/: license-ratchet.txt
.github/workflows/: ci.yml  publish-mcp.yml  release-mat-rs.yml  release-rs-materials.yml  release.yml
clients/python/pymat-mcp/: README.md  pyproject.toml
clients/python/pymat-mcp/src/pymat_mcp/: __init__.py  server.py  tools.py
clients/python/pymat-mcp/tests/: test_server.py  test_tools.py
docs/: COMMIT_MESSAGE_STANDARD.md  README_TEMPLATE.md  data-policy.md
docs/catalog/: README.md
docs/catalog/ceramics/: README.md  alumina.md  beryllia.md  shapal.md  sic.md  yttria.md  zirconia.md
docs/catalog/metals/: stainless.md
docs/catalog/plastics/: README.md  abs.md  delrin.md  nylon.md  pc.md  pctfe.md  pe.md  peek.md  petg.md  pla.md  pmma.md  ptfe.md  torlon.md  tpu.md  ultem.md  vespel.md
docs/decisions/: 0002-pbr-via-threejs-materials-optional-extra.md  0002-vis-owns-identity-client-exposed.md  0003-schema-foundation.md
docs/issues/: issue-103.md  issue-104.md  issue-105.md  issue-106.md  issue-107.md  issue-108.md  issue-109.md  issue-113.md  issue-115.md  issue-116.md  issue-118.md  issue-122.md  issue-123.md  issue-124.md  issue-125.md  issue-126.md  issue-127.md  issue-128.md  issue-129.md  issue-130.md  issue-131.md  issue-132.md  issue-133.md  issue-134.md  issue-135.md  issue-136.md  issue-137.md  issue-138.md  issue-139.md  issue-140.md  issue-141.md  issue-142.md  issue-143.md  issue-144.md  issue-145.md  issue-146.md  issue-147.md  issue-148.md  issue-149.md  issue-150.md  (+63 more)
docs/migration/: v2-to-v3.md
docs/pull-requests/: pr-101.md  pr-102.md  pr-110.md  pr-111.md  pr-112.md  pr-114.md  pr-121.md  pr-180.md  pr-181.md  pr-182.md  pr-183.md  pr-184.md  pr-185.md  pr-186.md  pr-188.md  pr-189.md  pr-190.md  pr-191.md  pr-192.md  pr-193.md  pr-194.md  pr-195.md  pr-196.md  pr-197.md  pr-198.md  pr-199.md  pr-200.md  pr-201.md  pr-202.md  pr-203.md  pr-204.md  pr-205.md  pr-206.md  pr-207.md  pr-208.md  pr-209.md  pr-210.md  pr-211.md  pr-212.md  pr-213.md  (+25 more)
examples/: build123d_integration.py  pbr_integration.py
mat-rs/: CHANGELOG.md  Cargo.toml
mat-rs/src/: db.rs  elements.rs  error.rs  formula.rs  lib.rs  material.rs
mat-rs/tests/: integration.rs
scripts/: _curation.py  audit_attach_sources.py  check_licenses.py  check_pep_naming.py  enrich_from_geant4_nist.py  enrich_from_nist_webbook.py  enrich_from_pubchem.py  enrich_from_refractiveindex.py  enrich_from_wikidata.py  enrich_vis.py  generate_previews.py  generate_readme.py  migrate_toml_finishes.py  requirements-curation.txt
src/py_mat/: __init__.py
src/pymat/: __init__.py  _registry.py  core.py  curves.py  factories.py  loader.py  properties.py  search.py  sources.py
src/pymat/data/: ceramics.toml  electronics.toml  gases.toml  liquids.toml  metals.toml  plastics.toml  scintillators.toml
src/pymat/pbr/: _protocol.py
src/pymat/vis/: __init__.py  _client.py  _model.py  adapters.py
tests/: render_bernhard_grid.py  test_adapters.py  test_apply_to.py  test_build123d_integration_examples.py  test_check_licenses.py  test_consumer_journey.py  test_curation_helpers.py  test_e2e_vis.py  test_eager_imports.py  test_electrical_fields.py  test_enrichers.py  test_error_messages.py  test_example.py  test_geant4_enrichment.py  test_integration.py  test_loader.py  test_lookup.py  test_magnetic_subtable.py  test_material_copy.py  test_materials_registry.py  test_mechanical_fields.py  test_nist_webbook_enrichment.py  test_nuclear_subtable.py  test_optical_fields.py  test_pbr.py  test_pubchem_enrichment.py  test_public_api_surface.py  test_readme_examples.py  test_refractiveindex_enrichment.py  test_search.py  test_sources.py  test_stddev_sugar.py  test_substrate_repros.py  test_temp_curves.py  test_thermal_fields.py  test_toml_integrity.py  test_uncertainties.py  test_vacuum_subtable.py  test_vis.py  test_vis_bernhard_repros.py  (+6 more)
tests/fixtures/: nist_webbook_water.txt  pubchem_water.json  refractiveindex_sample.yaml  wikidata_sample.json
tests/visual_output/: metal_textured_threejs.json  steel_threejs.json
