[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-materials"
version = "3.10.0"
description = "Hierarchical material library for CAD applications with build123d integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lars Gerchow" }
]
keywords = ["materials", "cad", "build123d", "engineering", "properties"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pint>=0.20",
    "periodictable>=1.6.0",
    "uncertainties>=3.2",
    "mat-vis-client>=0.6.3",
    # rapidfuzz: typo-tolerant scoring in pymat.search. Pure-Rust
    # wheel, broad platform support, no compile burden. Replaces the
    # 3.8.0-and-prior substring-containment matcher (#179).
    "rapidfuzz>=3.0",
    "tomli>=1.0.0; python_version == '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build123d>=0.7.0; python_version<'3.13'",
]
# Nuclear data tables — wires `mat.properties.nuclear.mu_rho()` and
# friends to the nucl-parquet package (cross-sections, stopping powers,
# decay chains). Lazy-imported in src/pymat/properties.py:NuclearProperties
# so the core install stays dependency-light. Install with:
#   pip install py-materials[nuclear]
# nucl-parquet requires Python 3.11+; on 3.10 the extra resolves to nothing
# and `mu_rho()` will surface the same ImportError it does without the extra.
nuclear = [
    "nucl-parquet>=0.1.0; python_version >= '3.11'",
]

[project.urls]
Homepage = "https://github.com/MorePet/py-mat"
Repository = "https://github.com/MorePet/py-mat"
Issues = "https://github.com/MorePet/py-mat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pymat"]

# PEP 561: ship the ``py.typed`` marker so type checkers (mypy/pyright)
# know to read inline annotations rather than skipping the package as
# untyped. Required for the ``Unpack[VisDeltas]`` typing on
# ``Vis.override`` to take effect under ``mypy --strict``.
[tool.hatch.build.targets.wheel.force-include]
"src/pymat/py.typed" = "pymat/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/pymat/**",
    "tests/**",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    "ignore:Material\\(pbr=:DeprecationWarning",
    "ignore:TOML \\[pbr\\] section:DeprecationWarning",
    "ignore:AffineScalarFunc:FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
